--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,5 +23,9 @@
     <string name="todo">TODO</string>
     <string name="description">Prefix for the text describing how often a plant should be watered. Used in combination with watering_needs_suffix.
     Content description for the header / hero image that is show at the top of the plant detail screen.</string>
+    <string name="menu_meal">meal</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
