commit 11 1_change Recipes_profile.xml add CardViews to three items 2_remove timers_dialog 3_add floating menu 4_create favorite package 5_food.class 6_tags_adapter.java

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="todo">TODO</string>
     <string name="frag_home_text_1">Today\'s Special</string>
     <string name="frag_home_text_2">find your food</string>
+    <string name="favorite">favorite</string>
 </resources>
